Fixed: horizontal overflow of experienceCard after expanding (#420)

--- a/src/components/experienceCard/ExperienceCard.css
+++ b/src/components/experienceCard/ExperienceCard.css
@@ -88,7 +88,7 @@
 }
 
 .experience-card {
-  min-width: 350px;
+  min-width: 275px;
   /* height: 170px; */
   margin-bottom: 20px;
   border-radius:10px;
